[package]
name = "passguard"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = [ "kremilly" ]
homepage = "https://kremilly.com"
documentation = "https://kremilly.com/docs/passguard"

[dependencies]
rand = "0.8.5"
reqwest = "0.12.5"
tokio = { version = "1.38.0", features = ["full"] }
zxcvbn = "3.0.1"
