[package]
name = "passguard"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["kremilly"]
keywords = ["password-generator", "passphrase-generator", "password-score", "security"]
description = "This Rust-based password and passphrase generator offers a versatile solution for creating secure, customizable passwords. With support for password size and include uppercase, numbers and symbols."
repository = "https://github.com/kremilly/PassGuard"
homepage = "https://kremilly.com"

[dependencies]
rand = "0.8.5"
reqwest = "0.12.5"
tokio = { version = "1.38.0", features = ["full"] }
zxcvbn = "3.0.1"
